--- a/app/components/layout/header/header.scss
+++ b/app/components/layout/header/header.scss
@@ -5,6 +5,12 @@
   padding: 20px 0;
 }
 
+.content-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .logo {
   height: 54px;
 }
@@ -12,4 +18,23 @@
 .logo-link {
   display: inline-block;
   margin-right: 20px;
+}
+
+.input-search {
+  width: 260px;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 8px 8px 8px 52px;
+  background-image: url("static/icons/header/search.svg");
+  background-color: var(--yellow-color);
+  border: 2px solid var(--dark-color);
+  border-radius: 30px;
+  background-repeat: no-repeat;
+  background-position: top 50% left 18px;
+  background-size: 22px;
+
+  &::placeholder {
+    color: grey;
+  }
 }
