--- a/app/styles/fontface.scss
+++ b/app/styles/fontface.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Gilroy';
-  src: url('../assets/fonts/Gilroy-Light.woff2') format('woff2'),
-  url('../assets/fonts/Gilroy-Light.woff') format('woff');
+  src: url('../../static/fonts/Gilroy-Light.woff2') format('woff2'),
+  url('../../static/fonts/Gilroy-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
   font-family: 'Gilroy';
-  src: url('../assets/fonts/Gilroy-Regular.woff2') format('woff2'),
-  url('../assets/fonts/Gilroy-Regular.woff') format('woff');
+  src: url('../../static/fonts/Gilroy-Regular.woff2') format('woff2'),
+  url('../../static/fonts/Gilroy-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
   font-family: 'Gilroy';
-  src: url('../assets/fonts/Gilroy-Medium.woff2') format('woff2'),
-  url('../assets/fonts/Gilroy-Medium.woff') format('woff');
+  src: url('../../static/fonts/Gilroy-Medium.woff2') format('woff2'),
+  url('../../static/fonts/Gilroy-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -27,8 +27,8 @@
 
 @font-face {
   font-family: 'Gilroy';
-  src: url('../assets/fonts/Gilroy-SemiBold.woff2') format('woff2'),
-  url('../assets/fonts/Gilroy-SemiBold.woff') format('woff');
+  src: url('../../static/fonts/Gilroy-SemiBold.woff2') format('woff2'),
+  url('../../static/fonts/Gilroy-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -36,8 +36,8 @@
 
 @font-face {
   font-family: 'Gilroy';
-  src: url('../assets/fonts/Gilroy-Bold.woff2') format('woff2'),
-  url('../assets/fonts/Gilroy-Bold.woff') format('woff');
+  src: url('../../static/fonts/Gilroy-Bold.woff2') format('woff2'),
+  url('../../static/fonts/Gilroy-Bold.woff') format('woff');
   font-weight: 800;
   font-style: normal;
   font-display: swap;
