--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -32,6 +32,14 @@
   margin-bottom: 52px;
 }
 
+.gl-subtitle {
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: bold;
+  color: var(--orange-color);
+  margin-bottom: 20px;
+}
+
 .gl-fox-info-wrapper {
   display: flex;
   flex-direction: column;
