--- a/app/styles/consts.scss
+++ b/app/styles/consts.scss
@@ -9,6 +9,7 @@
   --orange-color: #CA4100;
   --orange-color-hover: #FFAA6D;
   --blue-color: #E8FBFF;
+  --border-color: #D7D7D7;
   --lilac-color: #A9BCFF;
   --dark-color: #000000;
 
