--- a/app/@pages/main/main.scss
+++ b/app/@pages/main/main.scss
@@ -33,7 +33,7 @@ $step-circle-size: 220px;
 
   &:before {
     position: absolute;
-    content: "";
+    content: '';
     top: 10px;
     left: 0;
     width: 12px;
