--- a/@pages/poems-list/components/by-authors/by-authors.scss
+++ b/@pages/poems-list/components/by-authors/by-authors.scss
@@ -29,7 +29,7 @@ $arrow-size: 28px;
     transform: translateY(-50%) rotate(0);
     width: $arrow-size;
     height: $arrow-size;
-    background-image: url('static/icons/arrow.svg');
+    background-image: url('../../../../static/icons/arrow.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
