--- a/components/layout/header/header.scss
+++ b/components/layout/header/header.scss
@@ -27,7 +27,7 @@
   font-size: 20px;
   line-height: 24px;
   padding: 8px 8px 8px 52px;
-  background-image: url("static/icons/header/search.svg");
+  background-image: url("../../../static/icons/header/search.svg");
   background-color: var(--yellow-color);
   border: 2px solid var(--dark-color);
   border-radius: 30px;
