--- a/@pages/poem/poem.scss
+++ b/@pages/poem/poem.scss
@@ -18,3 +18,9 @@
   font-size: 48px;
   line-height: 52px;
 }
+
+.video-wrapper {
+  width: min-content;
+  height: min-content;
+  box-shadow: 0 0 26px 4px rgba(0, 0, 0, 0.32)
+}
