--- a/@pages/poem/poem.scss
+++ b/@pages/poem/poem.scss
@@ -20,7 +20,7 @@
 }
 
 .video-wrapper {
-  width: min-content;
-  height: min-content;
-  box-shadow: 0 0 26px 4px rgba(0, 0, 0, 0.32)
+  width: 670px;
+  height: 390px;
+  box-shadow: 0 0 26px 4px rgba(0, 0, 0, 0.32);
 }
