--- a/components/bookmarks-bar/bookmarks-bar.scss
+++ b/components/bookmarks-bar/bookmarks-bar.scss
@@ -20,7 +20,7 @@
   background-color: var(--yellow-color);
   border: 2px solid #000000;
   box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.15);
-  border-radius: 8px 0 0 8px;
+  border-radius: var(--border-radius-normal) 0 0 var(--border-radius-normal);
   padding: 8px 30px;
   font-size: 22px;
   transition: all var(--transition-duration-short);
