--- a/styles/global.scss
+++ b/styles/global.scss
@@ -40,6 +40,13 @@
   margin-bottom: 20px;
 }
 
+.gl-caption {
+  font-size: 32px;
+  line-height: 44px;
+  color: var(--orange-color);
+  margin-bottom: 28px;
+}
+
 .gl-fox-info-wrapper {
   display: flex;
   flex-direction: column;
@@ -52,7 +59,7 @@
   background: #FFFFFF;
   border: 1px solid #000000;
   box-shadow: 1px 1px 14px rgba(0, 0, 0, 0.18);
-  border-radius: 8px;
+  border-radius: var(--border-radius-normal);
   padding: 10px 12px;
   max-width: 156px;
   min-width: 130px;
