--- a/styles/consts.scss
+++ b/styles/consts.scss
@@ -14,7 +14,8 @@
   --dark-color: #000000;
 
   /* z-index's */
-  --z-index-header: 3;
+  --z-index-header: 4;
+  --z-index-tooltip: 3;
 
   /* transition */
   --transition-duration-short: 250ms;
