--- a/@pages/poem/components/poem-text/poem-text.scss
+++ b/@pages/poem/components/poem-text/poem-text.scss
@@ -1,6 +1,6 @@
 .btns-tools-wrapper {
   display: flex;
-  margin-bottom: 18px;
+  margin-bottom: 28px;
 }
 
 .btn-tool {
@@ -68,3 +68,41 @@
     }
   }
 }
+
+.poem-text-wrapper {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 400;
+
+  .mark-blue, .mark-orange {
+    position: relative;
+    cursor: pointer;
+
+    &:before {
+      position: absolute;
+      content: '';
+      top: -2px;
+      left: -4px;
+      width: calc(100% + 8px);
+      height: calc(100% + 4px);
+      border-radius: 10px;
+      padding: 4px 8px;
+    }
+  }
+
+  .mark-blue {
+    &:before {
+      background-color: rgba(169, 188, 255, .2);
+      border: 1px solid #A9BCFF;
+    }
+  }
+
+  .mark-orange {
+    &:before {
+      background-color: rgba(255, 210, 169, .2);
+      border: 1px solid #FFD2A9;
+    }
+  }
+}
+
+
