--- a/components/layout/header/header.scss
+++ b/components/layout/header/header.scss
@@ -4,6 +4,7 @@
   background-color: #FFFFFF;
   padding: 20px 0;
   z-index: var(--z-index-header);
+  box-shadow: 0 6px 20px 6px rgba(0, 0, 0, .03);
 }
 
 .content-wrapper {
