--- a/@pages/poems-list-by-author/poems-list-by-author.scss
+++ b/@pages/poems-list-by-author/poems-list-by-author.scss
@@ -29,7 +29,7 @@ $arrow-size: 28px;
     transform: translateY(-50%) rotate(0);
     width: $arrow-size;
     height: $arrow-size;
-    background-image: url('../../../../static/icons/arrow.svg');
+    background-image: url('/icons/arrow.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -51,5 +51,11 @@ $arrow-size: 28px;
 
   &:hover {
     text-decoration: underline;
+  }
+}
+
+.subtitle {
+  .mark {
+    color: var(--orange-color-hover)
   }
 }
