--- a/components/layout/header/header.scss
+++ b/components/layout/header/header.scss
@@ -17,28 +17,61 @@
   height: 50px;
 }
 
-.logo-link {
+.logo-link-wrapper {
   display: inline-block;
-  margin-right: 20px;
+  padding: 16px;
+  margin: -16px;
+  margin-left: calc(20px - 16px);
+}
+
+.logo-link-content {
+  font-size: 16px;
+  line-height: 30px;
+  position: relative;
+  transition: color var(--transition-duration-short);
+
+  &:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+    background-color: var(--orange-color);
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform var(--transition-duration-short) ease-in-out;
+  }
+
+  &:hover, &.mod-active {
+    color: var(--orange-color);
+
+    &:before {
+      transform-origin: left;
+      transform: scaleX(1);
+    }
+  }
 }
 
 .input-search {
-  width: 260px;
+  width: 176px;
   font-weight: 300;
-  font-size: 20px;
-  line-height: 24px;
-  padding: 8px 8px 8px 52px;
-  background-image: url("../../../static/icons/header/search.svg");
+  font-size: 16px;
+  line-height: 16px;
+  padding: 4px 4px 4px 42px;
+  background-image: url("/icons/header/search.svg");
   background-color: var(--yellow-color);
   border: 2px solid var(--dark-color);
   border-radius: 30px;
   background-repeat: no-repeat;
-  background-position: top 50% left 18px;
-  background-size: 22px;
-  transition: background-color var(--transition-duration-long);
+  background-position: top 50% left 12px;
+  background-size: 16px;
+  transition: all var(--transition-duration-long);
 
   &:focus {
-    background-color: var(--orange-color-hover);
+    background-color: #ffeeaa;
+    width: 260px;
   }
 
   &::placeholder {
