--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -34,6 +34,7 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, 
 
 body {
   overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
   color: var(--dark-color);
 }
 
