--- a/@pages/poems-list-by-grad/poems-list-by-grad.scss
+++ b/@pages/poems-list-by-grad/poems-list-by-grad.scss
@@ -49,6 +49,7 @@
   padding: 16px 16px 16px 60px;
   display: block;
   white-space: nowrap;
+  user-select: none;
 
   &:before {
     position: absolute;
@@ -61,5 +62,18 @@
     border-radius: 100%;
     background-color: #FFFFFF;
     border: 4px solid var(--yellow-color);
+    transition: background-color var(--transition-duration-short);
+  }
+
+  &:after {
+    position: absolute;
+    content: '';
+    top: calc(50% - 6px);
+    left: 6px;
+    transform: translateY(-50%);
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    background-color: #FFFFFF;
   }
 }
