--- a/components/layout/footer/footer.scss
+++ b/components/layout/footer/footer.scss
@@ -1,6 +1,10 @@
 .content-wrapper {
   padding-top: 28px;
   padding-bottom: 28px;
+  box-shadow: 0 6px 20px 6px rgb(0 0 0 / .3);
+}
+
+.content {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
